# AIOT_NTI_TRAINING

./: README.md
C_Programming/1/: Makefile
C_Programming/1/src/: hello_AIOT.c
C_Programming/2-DataType_Operator/: CMakeLists.txt  Makefile
C_Programming/2/src/: Basic.c
C_Programming/3/: CMakeLists.txt
C_Programming/3/inc/: user_function.h
C_Programming/3/src/: function.c  user_function.c
C_Programming/4/: CMakeLists.txt
C_Programming/4/src/: pointer.c
C_Programming/5/: CMakeLists.txt
C_Programming/5-Memory/include/: queue.h
C_Programming/5-Memory/src/: queue.c
C_Programming/5/include/: stack.h
C_Programming/5/src/: memory.c  stack.c
C_Project_ATM_Simulator/: CMakeLists.txt
C_Project_ATM_Simulator/Saved_Files/: accounts.text  aduit_Log_file.text  atm_cash.text  mini_statement_file.text
C_Project_ATM_Simulator/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
C_Project_ATM_Simulator/include/: admin.h  app.h  private.h
C_Project_ATM_Simulator/src/: admin.c  app.c  customer.c  main.c
Moduals_Driver/MQTT_HiveMq_Project/: MQTT_HiveMq_Project.ino
Moduals_Driver/MQTT_HiveMq_Project/src/: APP_cfg.h
Moduals_Driver/src/: APP_cfg.h
Moduals_Driver/src/APP/LED/: LED.cpp
Moduals_Driver/src/APP/LM35/: LM35.h
Moduals_Driver/src/HAL/GPIO/: gpio.cpp  gpio.h
Moduals_Driver/src/HAL/WIFI/: WIFI.cpp
Modules_Driver_Arduino_IDE/src/APP/BUTTON/: Button.cpp
Modules_Driver_Arduino_IDE/src/APP/MQTT/: MQTT.h
Modules_Driver_Arduino_IDE/src/HAL/UART/: UART.cpp  UART.h
Modules_Driver_ESP IDF/Http_server_wep_control_led/: .cproject  .project
Modules_Driver_ESP IDF/Http_server_wep_control_led/Src/: Cfg.h
Modules_Driver_ESP IDF/Http_server_wep_control_led/main/: CMakeLists.txt  main.c
Modules_Driver_ESP IDF/Src/: Cfg.h
Modules_Driver_ESP IDF/Src/App/HTTP_CLIENT/: client_use_instraction.txt  http_client.c  http_client.h
Modules_Driver_ESP IDF/Src/App/HTTP_SERVER/: server_use_instraction.txt
Modules_Driver_ESP IDF/Src/App/MQTT/: Mqtt_use_instraction.txt
Modules_Driver_ESP IDF/Src/App/POT/: pot.c
Modules_Driver_ESP IDF/Src/App/ULTRASONIC/: ultrasonic.c  ultrasonic.h
Modules_Driver_ESP IDF/main/: CMakeLists.txt  main.c
RTOS/1-Create_task/Frist_lab_create_task/: Frist_lab_create_task.ino
RTOS/1-Create_task/Lab_2_create_task/: Lab_2_create_task.ino
RTOS/2-Binary_Semaphor/Binary_Semaphor/: Binary_Semaphor.ino
RTOS/3-Mutex/Mutex/: Mutex.ino
RTOS/4-Event_group/event_group/: event_group.ino
RTOS/5-Mailbox/mailbox/: mailbox.ino
RTOS/6-task_notification/: 6-task_notification.ino
RTOS/RTOS_Project/Simulate_project/: Simulate_project.ino
RTOS/lab_1_blink_led/: lab_1_blink_led.ino
RTOS/lab_1_blink_led/src/: App_cfg.h
RTOS/lab_2_Button_Debouncing/: lab_2_Button_Debouncing.ino
RTOS/lab_3_two_condition_on_led/: lab_3_two_condition_on_led.ino
RTOS/lab_4_button_pressed_counting/: lab_4_button_pressed_counting.ino
RTOS/lab_5_counting_semaphor/: lab_5_counting_semaphor.ino
RTOS/lab_6_Controller_mode/: lab_6_Controller_mode.ino
RTOS/lab_7_QueueLED_Commend/: lab_7_QueueLED_Commend.ino
(+33 files in other folders)
